# portfolio

./: .gitmodules  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Manager.cpp  Manager.h  main.cpp
src/dependencies/: CMakeLists.txt
src/dependencies/include/: Project.h
src/dependencies/src/: Project.cpp
